--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,11 +24,11 @@ for:
   - pwsh -v
   - sh build.sh
 artifacts:
-- path: artifacts/kmd.logic.citizen_document.client*.nupkg
+- path: artifacts/Kmd.Logic.CitizenDocuments.Client*.nupkg
 deploy:
 - provider: NuGet
   api_key:
-    secure: cxnqT81ROTppRqe38gj69DWR//0h3h3+54voUvyu/uC3nqCbqQIzd4tp8ZF3p9Q/
+    secure: cxnqT81ROTppRqe38gj69DWR//0h3h3+54voUvyu/uC3nqCbqQIzd4tp8ZF3p9Q/-
   skip_symbols: true
   on:
     branch: /^(master|dev)$/
@@ -36,7 +36,7 @@ deploy:
 - provider: GitHub
   auth_token:
     secure: g3OuAhKEQrlw42xRckTIVFfd3RWLlJ+J6v0gDL1vARSFRnnvxNKTYmwwzeCHk2cG
-  artifact: kmd.logic.citizen_document.*\.nupkg/
+  artifact: Kmd.Logic.CitizenDocuments.*\.nupkg/
   tag: v$(appveyor_build_version)
   on:
     branch: master
