Update Kmd.Logic.Identity.Authorization dependency to version 2.0.0

--- a/sample/Kmd.Logic.CitizenDocuments.Client.Sample/appsettings.json
+++ b/sample/Kmd.Logic.CitizenDocuments.Client.Sample/appsettings.json
@@ -2,7 +2,6 @@
   "TokenProvider": {
     "ClientId": "",
     "ClientSecret": "",
-    "AuthorizationScope": "",
-    "AuthorizationTokenIssuer": ""
+    "AuthorizationScope": ""
   }
 }
