--- a/sample/Kmd.Logic.CitizenDocuments.Client.Sample/Kmd.Logic.CitizenDocuments.Client.Sample.csproj
+++ b/sample/Kmd.Logic.CitizenDocuments.Client.Sample/Kmd.Logic.CitizenDocuments.Client.Sample.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.1" />
