--- a/src/Kmd.Logic.CitizenDocuments.Client/Kmd.Logic.CitizenDocuments.Client.csproj
+++ b/src/Kmd.Logic.CitizenDocuments.Client/Kmd.Logic.CitizenDocuments.Client.csproj
@@ -4,6 +4,8 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Kmd.Logic.CitizenDocuments.Client</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>kmd.logic.public.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
